Доделал адаптив формы

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/course.css">
     <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/register.css">
   </head>
   <body>
 
@@ -544,19 +545,17 @@
     <!-- Contact -->
     <section id="register">
       <div class="container padding-medium">
-        <div class="row align-items-center">
-          <div class="offset-md-1 col-md-5 ">
-            <div>
-              <h2 class="display-6 fw-semibold">Введите ваши данные чтобы мы смогли подобрать вам программу обучения</h2>
-            </div>
+        <div class="register__container">
+          <div class="regiter__text">
+            <h2 class="display-6 fw-semibold">Введите ваши данные чтобы мы смогли подобрать вам программу обучения</h2>
           </div>
-          <div class="col-md-5">
+          <div class="col-md-5 register__form">
             <form id="form">
               <input type="text" name="email" placeholder="Ваше имя"class="form-control bg-white border-0 rounded-4 shadow-none rounded-pill text-center px-4 py-3 w-100 mb-4">
               <input type="text" name="email" placeholder="Ваш телефон" class="form-control bg-white border-0 rounded-4 shadow-none rounded-pill text-center px-4 py-3 w-100 mb-4">
               <input type="email" name="email" placeholder="Ваша почта" class="form-control bg-white border-0 rounded-4 shadow-none rounded-pill text-center px-4 py-3 w-100 mb-4">
               <div class="d-grid">
-                <button class="btn btn-primary px-5 py-3"> Get Started now</button>
+                <button class="btn btn-primary px-5 py-3">Отправить</button>
               </div>
             </form>
           </div>
