Доделал адаптив слайдера и верстку футера

--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
     <link rel="stylesheet" href="css/course.css">
     <link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="css/register.css">
+    <link rel="stylesheet" href="css/footer.css">
 
   </head>
   <body>
 
-    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
       <defs>
         <symbol id="facebook" viewBox="0 0 24 24">
           <path fill="currentColor"
@@ -113,10 +114,10 @@
             d="M20.16 5A6.29 6.29 0 0 0 12 4.36a6.27 6.27 0 0 0-8.16 9.48l6.21 6.22a2.78 2.78 0 0 0 3.9 0l6.21-6.22a6.27 6.27 0 0 0 0-8.84m-1.41 7.46l-6.21 6.21a.76.76 0 0 1-1.08 0l-6.21-6.24a4.29 4.29 0 0 1 0-6a4.27 4.27 0 0 1 6 0a1 1 0 0 0 1.42 0a4.27 4.27 0 0 1 6 0a4.29 4.29 0 0 1 .08 6Z" />
         </symbol>
       </defs>
-    </svg>
+    </svg> -->
 
      <!-- Header  -->
-    <header class="header">
+      <header class="header">
       <div class="header__menu__blur"></div>
       <div class="header__container">
         <div class="header__logo">
@@ -155,41 +156,6 @@
         </nav>
       </div>
     </header>
-    <!-- <nav class="main-menu d-flex navbar navbar-expand-lg p-2 py-3 p-lg-4 py-lg-4 ">
-      <div class="container-fluid justify-content-end">
-        <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header mt-3">
-            <button type="button" class="btn-close shadow-none" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-
-          <div class="offcanvas-body justify-content-between align-items-center ">
-            <div class='header__menu__container'>
-              <ul class="header__menu">
-                <li class="header__menu__item">
-                  <a href="#features">Обо мне</a>
-                </li>
-                <li class="header__menu__item">
-                  <a href="#courses">Программы</a>
-                </li>
-                <li class="header__menu__item">
-                  <a href="#testimonial">Отзывы</a>
-                </li>
-                <li class="header__menu__item">
-                  <a href="#register">Контакты</a>
-                </li>
-                <li class="header__menu__item">
-                  <a href="#footer">Сертификаты</a>
-                </li>
-              </ul>
-            </div>
-        </div>
-      </div>
-    </nav> -->
     <!-- Header -->
 
     <!-- Start -->
@@ -473,12 +439,6 @@
                 <div class="swiper-slide">
                   <video controls src="assets/video/WhatsApp Video 2024-03-19 at 12.43.58.mp4"></video>
                 </div>
-                <div class="swiper-slide">
-                  <video controls src="assets/video/WhatsApp Video 2024-03-19 at 12.43.58.mp4"></video>
-                </div>
-                <div class="swiper-slide">
-                  <video controls src="assets/video/WhatsApp Video 2024-03-19 at 12.43.58.mp4"></video>
-                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -511,141 +471,31 @@
     </section>
     <!-- Contact -->
 
-    <footer id="footer">
-      <div class="container padding-medium ">
-        <div class="row">
-          <div class="col-sm-6 col-lg-4 my-3">
-            <div class="footer-menu">
-              <a href="index.html">
-                <img width="80" height="80" src="images/logo.jpg" alt="logo" class="img-fluid">
-              </a> 
-              <div class="social-links mt-4">
-                <ul class="d-flex list-unstyled ">
-                  <li class="me-4">
-                    <a href="#">
-                      <svg class="social-icon" width="30" height="30" aria-hidden="true">
-                        <use xlink:href="#facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="me-4">
-                    <a href="#">
-                      <svg class="social-icon" width="30" height="30" aria-hidden="true">
-                        <use xlink:href="#twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="me-4">
-                    <a href="#">
-                      <svg class="social-icon" width="30" height="30" aria-hidden="true">
-                        <use xlink:href="#instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="me-4">
-                    <a href="#">
-                      <svg class="social-icon" width="30" height="30" aria-hidden="true">
-                        <use xlink:href="#linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="me-4">
-                    <a href="#">
-                      <svg class="social-icon" width="30" height="30" aria-hidden="true">
-                        <use xlink:href="#youtube"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-2 my-3">
-            <div class="footer-menu">
-              <h5 class=" fw-bold mb-4">Quick Links</h5>
-              <ul class="menu-list list-unstyled">
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">Home</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">About us</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">Courses</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">Blogs</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-2 my-3">
-            <div class="footer-menu">
-              <h5 class=" fw-bold mb-4">About</h5>
-              <ul class="menu-list list-unstyled">
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">How It Works</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">Pricing</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">Promotion</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">Affilation</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-2 my-3">
-            <div class="footer-menu">
-              <h5 class=" fw-bold mb-4">Help Center</h5>
-              <ul class="menu-list list-unstyled">
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">Payments</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">FAQs</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">Checkout</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">Other</a>
-                </li>
-
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-2 my-3">
-            <div class="footer-menu">
-              <h5 class=" fw-bold mb-4">Contact Us</h5>
-              <ul class="menu-list list-unstyled">
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">contact@yourcompany</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">+110 4587 2445</a>
-                </li>
-                <li class="menu-item mb-2">
-                  <a href="#" class="footer-link">New York, USA</a>
-                </li>
-              </ul>
-            </div>
-          </div>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__logo">
+          <img width="100" height="100" src="images/logo.jpg" alt="logo">
+        </div>
+        <div class="footer__contacts">
+    
+          <ul class="contacts__items">
+            <ol><h2>Контакты:</h2></ol>
+            <li class="contacts__item">VK</li>
+            <li class="contacts__item">Телефон</li>
+            <li class="contacts__item">Почта</li>
+          </ul>
+        </div>
+        <div class="footer__sertificats">
+          <button>Смотреть сертификаты</button>
         </div>
       </div>
     </footer>
+    <!-- Footer -->
 
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"crossorigin="anonymous"></script>
     <script src="js/plugins.js"></script>
     <script src="js/script.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
