--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </svg> -->
 
      <!-- Header  -->
-      <header class="header">
+    <header class="header">
       <div class="header__menu__blur"></div>
       <div class="header__container">
         <div class="header__logo">
@@ -141,11 +141,11 @@
               <li class="header__menu__item">
                 <a href="#courses">Программы</a>
               </li>
-              <li class="header__menu__item">
+              <!-- <li class="header__menu__item">
                 <a href="#testimonial">Отзывы</a>
-              </li>
+              </li> -->
               <li class="header__menu__item">
-                <a href="#register">Контакты</a>
+                <a href="#footer">Контакты</a>
               </li>
               <li class="header__menu__item">
                 <a href="#footer">Сертификаты</a>
