--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
               <li class="header__menu__item">
                 <a href="#courses">Программы</a>
               </li>
-              <!-- <li class="header__menu__item">
+              <li class="header__menu__item">
                 <a href="#testimonial">Отзывы</a>
-              </li> -->
+              </li>
               <li class="header__menu__item">
                 <a href="#footer">Контакты</a>
               </li>
@@ -472,7 +472,7 @@
     <!-- Contact -->
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer id="footer" class="footer">
       <div class="footer__container">
         <div class="footer__logo">
           <img width="100" height="100" src="images/logo.jpg" alt="logo">
