Добавил слайдер для сертификатов

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <a href="#footer">Контакты</a>
               </li>
               <li class="header__menu__item">
-                <a href="#footer">Сертификаты</a>
+                <a href="#sertificait">Сертификаты</a>
               </li>
           </ul>
           </div>
@@ -486,8 +486,83 @@
             <li class="contacts__item">Почта</li>
           </ul>
         </div>
-        <div class="footer__sertificats">
-          <button>Смотреть сертификаты</button>
+      </div>
+      <div class="sertificait" id="sertificait">
+        <h2>Сертификаты</h2>
+        <div class="swiper sertificait__slider slids__container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/1.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/2.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/3.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/4.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/5.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/6.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/7.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/8.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/9.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/10.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/11.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/12.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/13.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sertificait__image">
+                <img src="images/лицензии и дипломы/14.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
         </div>
       </div>
     </footer>
