--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div class="container about__container">
         <div class="row align-items-center mt-xl-5 justify-content-between">
           <div class="offset-md-1 col-md-5">
-            <img src="images/programFoto1.jpg" alt="img" class="img-fluid rounded-circle">
+            <img src="images/aboutFoto.jpg" alt="img" class="img-fluid rounded-circle">
           </div>
           <div class="col-md-5 mt-5 mt-md-0">
             <div class="mb-3">
@@ -298,21 +298,21 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px">
                 <use href="#tick-circle" class="text-secondary" />
               </svg>
-              <p class="ps-4">Engage with a worldwide community of inquisitive and imaginative individuals.</p>
+              <p class="ps-4">Подготовка к ЕГЭ/ОГЭ</p>
             </div>
             <div class="d-flex">
               <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px">
                 <use href="#tick-circle" class="text-secondary" />
               </svg>
-              <p class="ps-4">Learn a skill of your choice from the experts around the world from various industries</p>
+              <p class="ps-4">Подготовка к ммеждународным экзаменам</p>
             </div>
             <div class="d-flex">
               <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px">
                 <use href="#tick-circle" class="text-secondary" />
               </svg>
-              <p class="ps-4">Learn a skill of your choice from the experts around the world from various industries</p>
+              <p class="ps-4">Обучение английскому для всех возрастов</p>
             </div>
-            <a href="about.html" class="btn btn-primary px-5 py-3 mt-4">Learn more</a>
+     
           </div>
         </div>
         <div class="about__video__container">
@@ -577,6 +577,7 @@
                     <video controls
                       src="assets/video/WhatsApp Video 2024-03-19 at 12.43.58.mp4" class="feedback__video"></video>
                   </div>
+
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
@@ -597,11 +598,11 @@
             </div>
             <div class="col-md-5 register__form">
               <form id="form">
-                <input type="text" name="email" placeholder="Ваше имя"
+                <input required type="text" name="email" placeholder="Ваше имя"
                   class="form-control bg-white border-0 rounded-4 shadow-none rounded-pill text-center px-4 py-3 w-100 mb-4">
-                <input type="text" name="email" placeholder="Ваш телефон"
+                <input required type="text" name="email" placeholder="Ваш телефон"
                   class="form-control bg-white border-0 rounded-4 shadow-none rounded-pill text-center px-4 py-3 w-100 mb-4">
-                <input type="email" name="email" placeholder="Ваша почта"
+                <input required type="email" name="email" placeholder="Ваша почта"
                   class="form-control bg-white border-0 rounded-4 shadow-none rounded-pill text-center px-4 py-3 w-100 mb-4">
                 <div class="d-grid">
                   <button class="btn btn-primary px-5 py-3">Отправить</button>
@@ -704,7 +705,7 @@
           <div class="footer__contacts">
             <div class="col-sm-6 col-lg-2 my-3">
               <div class="footer__menu">
-                <h5 class=" fw-bold mb-4">Contact Us</h5>
+                <h5 class=" fw-bold mb-4">Контакты</h5>
                 <ul class="menu-list list-unstyled">
                   <li class="menu-item  mb-2">
                     <a href="#" class=" footer__menu__item">contact@yourcompany</a>
