Доделал последние правки

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <link rel="stylesheet" href="css/register.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/sertificait.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/testimonial.css">
   </head>
   <body>
 
@@ -191,7 +193,7 @@
               <form id="form"
                 class="d-flex align-items-center position-relative ">
                 <input disabled type="text" name="email"
-                  placeholder="what are you trying to learn?"
+                  placeholder="What are you trying to learn?"
                   class="form-control bg-white border-0 rounded-4 shadow-none px-4 py-3 w-100">
                 <button
                   class="btn btn-primary rounded-4 px-3 py-2 position-absolute align-items-center m-1 end-0"><svg
@@ -352,7 +354,7 @@
             <div
               class="card rounded-4 border-0 sh
               adow-sm p-3 position-relative">
-              <a href="#"><img src="images/programFoto1.jpg"
+              <a class="course__image" href="#"><img src="images/2.jpg"
                   class="img-fluid rounded-3" alt="image"></a>
               <div class="card-body p-0">
 
@@ -376,7 +378,7 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-5">
             <div
               class="card rounded-4 border-0 shadow-sm p-3 position-relative">
-              <a href="#"><img src="images/programFoto2.jpg"
+              <a class="course__image" href="#"><img src="images/1.jpg"
                   class="img-fluid rounded-3" alt="image"></a>
               <div class="card-body p-0">
                 <div class="course__name__container">
@@ -401,7 +403,7 @@
 
             <div
               class="card rounded-4 border-0 shadow-sm p-3 position-relative">
-              <a href="#"><img src="images/programFoto3.jpg"
+              <a class="course__image" href="#"><img src="images/programFoto3.jpg"
                   class="img-fluid rounded-3" alt="image"></a>
               <div class="card-body p-0">
 
@@ -412,7 +414,7 @@
                   </p>
                 </div>
 
-                <a href="#">
+                <a class="course__image" href="#">
                   <h5 class="course-title py-2 m-0">Получите высокие баллы на
                     ЕГЭ/ОГЭ с нашими профессиональными курсами подготовки по
                     английскому языку! Опытный репетитор предоставит вам все
@@ -431,13 +433,12 @@
 
             <div
               class="card rounded-4 border-0 shadow-sm p-3 position-relative">
-              <a href="#"><img src="images/programFoto4.jpg"
+              <a class="course__image" href="#"><img src="images/programFoto4.jpg"
                   class="img-fluid rounded-3" alt="image"></a>
               <div class="card-body p-0">
-                <div class="">
+                <div class="course__name__container">
                   <p
-                    class="text-black-50 fw-bold text-uppercase m-0 course__name">Подготовка
-                    к международным экзаменам</p>
+                    class="text-black-50 fw-bold text-uppercase m-0 course__name">Подготовкак международным экзаменам</p>
                 </div>
                 <a href="#">
                   <h5 class="course-title py-2 m-0">Наши курсы по подготовке к
@@ -465,95 +466,52 @@
         <div class="text-center mb-4">
           <h2 class="display-6 fw-semibold">Отзывы</h2>
         </div>
-        <div class="row">
-          <div class="offset-md-1 col-md-10">
-            <div class="swiper testimonial-swiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide pe-md-5">
+        <div>
+          <div>
+            <div class=" testimonial__wrapper">
+              <div class="testimonial__container">
+                <div class="pe-md-5 testimonial__item">
                   <div class="my-4">
-                    <p class="text-muted">“Condimentum vel viverra morbi quisque lobortis eu leo. A nulla pulvinar at
-                      ut in sit libero, sed. Quis congue pretium in enim gravida quam netus in lorem. Nulla at nibh lorem
-                      nunc sapien egestas at cursus. ”</p>
-                    <div class="row">
-                      <div class="col-3"> <img src="images/reviwer1.jpg" alt="img" class="img-fluid rounded-circle">
+                    <p class="text-muted">
+                      “ Этот репетитор по-настоящему профессионален! Уровень его знаний великолепен, а методика обучения эффективна. С ней мой английский язык стал более уверенным и свободным. Очень благодарен за помощь! ”</p>
+                    <div class="testimonial__image__container">
+                      <div class="col-3"> <img src="images/ренатфахретдинов .jpg" alt="img" class="img-fluid rounded-circle">
                       </div>
                       <div class="col-9">
-                        <h5 class="m-0 mt-2">Recco Gracia</h5>
-                        <p class="text-muted">Web Developer</p>
+                        <h5 class="m-0 mt-2">Ренат Фахретдинов</h5>
                       </div>
-
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide pe-md-5">
+                <div class="pe-md-5 testimonial__item" >
                   <div class="my-4">
-                    <p class="text-muted">“Condimentum vel viverra morbi quisque lobortis eu leo. A nulla pulvinar at
-                      ut in sit libero, sed. Quis congue pretium in enim gravida quam netus in lorem. Nulla at nibh lorem
-                      nunc sapien egestas at cursus. ”</p>
-                    <div class="row">
-                      <div class="col-3"> <img src="images/reviwer2.jpg" alt="img" class="img-fluid rounded-circle">
+                    <p class="text-muted">“
+                      Диана - настоящий профессионал с индивидуальным подходом к каждому студенту. Она научил меня не только грамматике и лексике, но и уверенности в общении на английском. Благодаря ей, я гораздо лучше понимаю иностранный язык.
+                       ”</p>
+                    <div class="testimonial__image__container">
+                      <div class="col-3"> <img src="images/дарья.jpg" alt="img" class="img-fluid rounded-circle">
                       </div>
                       <div class="col-9">
-                        <h5 class="m-0 mt-2">Bicky Yeal</h5>
-                        <p class="text-muted">Web Developer</p>
+                        <h5 class="m-0 mt-2">Дарья Алексеева </h5>
                       </div>
-
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide pe-md-5">
+                <div class="pe-md-5 testimonial__item">
                   <div class="my-4">
-                    <p class="text-muted">“Condimentum vel viverra morbi quisque lobortis eu leo. A nulla pulvinar at
-                      ut in sit libero, sed. Quis congue pretium in enim gravida quam netus in lorem. Nulla at nibh lorem
-                      nunc sapien egestas at cursus. ”</p>
-                    <div class="row">
-                      <div class="col-3"> <img src="images/reviwer3.jpg" alt="img" class="img-fluid rounded-circle">
+                    <p class="text-muted">“
+                      Мой репетитор по английскому языку - лучший! Она делает уроки интересными и познавательными, помогает разобраться в сложных темах и поощряет к самостоятельному изучению. Мой английский стал гораздо лучше, и я уверенно продвигаюсь в изучении языка.
+                       ”</p>
+                    <div class="testimonial__image__container">
+                      <div class="col-3"> <img src="images/александр олейник.png" alt="img" class="img-fluid rounded-circle">
                       </div>
                       <div class="col-9">
-                        <h5 class="m-0 mt-2">Lilly Will</h5>
-                        <p class="text-muted">Web Developer</p>
+                        <h5 class="m-0 mt-2">Александр Олейник</h5>
                       </div>
-
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide pe-md-5">
-                  <div class="my-4">
-                    <p class="text-muted">“Condimentum vel viverra morbi quisque lobortis eu leo. A nulla pulvinar at
-                      ut in sit libero, sed. Quis congue pretium in enim gravida quam netus in lorem. Nulla at nibh lorem
-                      nunc sapien egestas at cursus. ”</p>
-                    <div class="row">
-                      <div class="col-3"> <img src="images/reviwer1.jpg" alt="img" class="img-fluid rounded-circle">
-                      </div>
-                      <div class="col-9">
-                        <h5 class="m-0 mt-2">Recco Gracia</h5>
-                        <p class="text-muted">Web Developer</p>
-                      </div>
-
-                    </div>
-                  </div>
-                </div>
-                <div class="swiper-slide pe-md-5">
-                  <div class="my-4">
-                    <p class="text-muted">“Condimentum vel viverra morbi quisque lobortis eu leo. A nulla pulvinar at
-                      ut in sit libero, sed. Quis congue pretium in enim gravida quam netus in lorem. Nulla at nibh lorem
-                      nunc sapien egestas at cursus. ”</p>
-                    <div class="row">
-                      <div class="col-3"> <img src="images/reviwer2.jpg" alt="img" class="img-fluid rounded-circle">
-                      </div>
-                      <div class="col-9">
-                        <h5 class="m-0 mt-2">Recco Gracia</h5>
-                        <p class="text-muted">Web Developer</p>
-                      </div>
-
-                    </div>
-                  </div>
-                </div>
-
               </div>
-
-              <div class="swiper-pagination"></div>
-
             </div>
           </div>
         </div>
@@ -563,7 +521,7 @@
       <section id="video__fidvideo feedback" class="feedback bg-primary-subtle">
         <div class="container">
           <div class="text-center mb-4">
-            <h2 class="display-6 fw-semibold video__feedback__title">Выдеоотзывы</h2>
+            <h2 class="display-6 fw-semibold video__feedback__title">Видеоотзывы</h2>
           </div>
           <div class="row">
             <div class="offset-md-1 col-md-10">
@@ -593,7 +551,7 @@
           <div class="register__container">
             <div class="offset-md-1 col-md-5 ">
               <div>
-                <h2 class="display-6 fw-semibold">Введите ваши данные чтобы мы смогли связаться с нами</h2>
+                <h2 class="display-6 fw-semibold contact__title">Введите ваши данные, чтобы мы смогли связаться с вами</h2>
               </div>
             </div>
             <div class="col-md-5 register__form">
@@ -708,14 +666,11 @@
               <div class="footer__menu">
                 <h5 class=" fw-bold mb-4">Контакты</h5>
                 <ul class="menu-list list-unstyled">
-                  <li class="menu-item  mb-2">
-                    <a href="#" class=" footer__menu__item">contact@yourcompany</a>
-                  </li>
                   <li class="menu-item mb-2">
-                    <a href="#" class=" footer__menu__item">+110 4587 2445</a>
+                    <a href="#" class=" footer__menu__item">+7 986 974-27-77</a>
                   </li>
                   <li class="menu-item  mb-2">
-                    <a href="#" class="footer__menu__item">New York, USA</a>
+                    <a href="#" class="footer__menu__item">Г.Уфа,Ул.Богдана Хмельницкого 2</a>
                   </li>
                 </ul>
               </div>
