--- a/index.html
+++ b/index.html
@@ -238,8 +238,7 @@
               <div class="feature-detail text-center">
                 <h2 class="feature-title">50+</h2>
                 <h6 class="feature-info text-uppercase">Достижений
-                  репититора</h6>
-
+                  репетитора</h6>
               </div>
             </div>
           </div>
