--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px">
                 <use href="#tick-circle" class="text-secondary" />
               </svg>
-              <p class="ps-4">Подготовка к ммеждународным экзаменам</p>
+              <p class="ps-4">Подготовка к международным экзаменам</p>
             </div>
             <div class="d-flex">
               <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px">
