--- a/index.html
+++ b/index.html
@@ -316,28 +316,46 @@
      
           </div>
         </div>
-        <div class="about__video__container">
-          <div class="video">
-            <a class="video__link" href="https://youtu.be/OjnhkRSMRq8">
-              <picture>
-                <source
-                  srcset="https://i.ytimg.com/vi_webp/OjnhkRSMRq8/maxresdefault.webp"
-                  type="image/webp">
-                <img class="video__media"
-                  src="https://i.ytimg.com/vi/OjnhkRSMRq8/maxresdefault.jpg"
-                  alt="1. Пилот, разборы, ответы и лайвы">
-              </picture>
-            </a>
-            <button class="video__button" aria-label="Запустить видео">
-              <svg width="68" height="48" viewBox="0 0 68 48"><path
-                  class="video__button-shape"
-                  d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path><path
-                  class="video__button-icon"
-                  d="M 45,24 27,14 27,34"></path></svg>
-            </button>
+        <!-- <div class="about__video__container">
+        
+        </div> -->
+        <div class="about__slider__container">
+          <div class="swiper sertificait__slider slids__container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                  <div class="video">
+                    <a class="video__link" href="https://youtu.be/OjnhkRSMRq8">
+                      <picture>
+                        <source
+                          srcset="https://i.ytimg.com/vi_webp/OjnhkRSMRq8/maxresdefault.webp"
+                          type="image/webp">
+                        <img class="video__media"
+                          src="https://i.ytimg.com/vi/OjnhkRSMRq8/maxresdefault.jpg"
+                          alt="1. Пилот, разборы, ответы и лайвы">
+                      </picture>
+                    </a>
+                    <button class="video__button" aria-label="Запустить видео">
+                      <svg width="68" height="48" viewBox="0 0 68 48"><path
+                          class="video__button-shape"
+                          d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path><path
+                          class="video__button-icon"
+                          d="M 45,24 27,14 27,34"></path></svg>
+                    </button>
+                  </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="about__video">
+                  <video controls src="assets/video/video1.mp4"></video>
+                </div>
+              </div>
+              <div class="swiper-slide ">
+                <div class="about__video">
+                  <video controls src="assets/video/video2.mp4"></video>
+              </div>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
           </div>
-
-        </div>
       </div>
     </section>
     <!-- About -->
